--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <img src="imags/portfolio.PNG" alt="">
   
              <div class="icon">
-              <a href="https://mohamedreda520.github.io/landing_page/"><i class="fa-regular fa-eye fa-bounce"></i></a>
+              <a href="https://github.com/Mohamedreda520/Portfolio/"><i class="fa-regular fa-eye fa-bounce"></i></a>
               <a href="https://github.com/Mohamedreda520/landing_page"><i class="fa-brands fa-github fa-beat-fade"></i></a>
              </div>
             </div>
