update style css and index html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="text">
         <h2><span>Front-end</span>Developer</h2>
         <div class="prag">
-          <p>Hello, I am  Mohamed Reda  in manegment information system student and a front-end developer, I have knowledge of programming languages and software tools, I am able to build well-designed web interfaces, and I am skilled in writing testable and effective code, a hard worker and a quick learner,I am also developing myself day by day, and I will master my job, thank you.</p>
+          <p>I am a graduate of management information system and front-end developer. I have knowledge of programming languages and software tools. I am able to build well-designed web interfaces. I am skilled at writing efficient and testable code. I am hardworking and a quick learner. I am also developing myself day by day. I will master Practical, thank you.</p>
         </div>
         <a class="btn" href="#Contact">Contact me</a>
       </div>
@@ -150,6 +150,11 @@
               <div class="card">
                 <h3>Bootstrap <span>70%</span></h3>
                 <div class="the-progress"><span style="width: 70%;"></span></div>
+                </div>
+              <!-- slill five -->
+              <div class="card">
+                <h3>Reactjs <span>50%</span></h3>
+                <div class="the-progress"><span style="width: 50%;"></span></div>
                 </div>
 
         </div>
